# chronicle

./: .gitignore  LICENSE  README.md  buf.yaml  pyproject.toml
docs/: getting-started.md
examples/: README.md  concurrent_workflows.py  distributed_demo.py  durable_restart.py  durable_timer.py  engine_crash_demo.py  hello_world.py  idempotent_charge.py  spike_coroutine.py
src/chronicle/: __init__.py  client.py  context.py  engine.py  events.py  history.py  retry.py  runtime.py  serialization.py  task_queue.py  worker.py
src/chronicle/client/: __init__.py
src/chronicle/core/: __init__.py  context.py  history.py  retry.py  runtime.py  serialization.py
src/chronicle/proto/: __init__.py  chronicle.proto  chronicle_pb2.py  chronicle_pb2.pyi  chronicle_pb2_grpc.py
src/chronicle/server/: __init__.py  engine.py  task_queue.py
src/chronicle/worker/: __init__.py
tests/: conftest.py  test_distributed.py  test_engine_recovery.py  test_executor.py  test_idempotency.py  test_persistence.py  test_replay.py  test_retries.py  test_serialization.py  test_timeouts.py  test_timers.py
tools/: gen_proto.py
