[project]
name = "chronicle"
version = "0.1.0"
description = "A minimal, readable durable-workflow execution engine: event sourcing + deterministic replay, built from scratch."
readme = "README.md"
authors = [
    { name = "Rutuj15", email = "rutujvp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade,
# B = bugbear, SIM = simplify, RUF = ruff-specific rules.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
# conftest is a local test module (same dir as the tests); classify it as
# first-party so its imports group with chronicle, not with third-party pytest.
known-first-party = ["chronicle", "conftest"]

[tool.mypy]
python_version = "3.12"
strict = true
# We drive coroutines manually; a few unavoidable .send() sites are hard to type.
# Narrow relaxations can be added inline (# type: ignore[...]) only where justified.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
